fix mobile address bar scrolling transition gap

--- a/less/global.less
+++ b/less/global.less
@@ -190,7 +190,7 @@ section {
 }
 
 .first-section {
-  margin-top: 2em;
+  margin-top: 2.5em;
   @media only screen and (max-width: @break-smaller) {
     margin-top: 0;
   }
@@ -233,9 +233,6 @@ section {
       display: none;
     }
   }
-  @media only screen and (max-width: @break-smallest) {
-    text-align: center;
-  }
 
   .sub-intro {
     @media only screen and (max-width: @break-smallest) {
@@ -245,7 +242,7 @@ section {
 }
 
 .greet-page {
-  font-size: 1.1em;
+
   color: #5a5a5a;
   font-weight: 100;
   h1 {
